<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".ui.fragment.client.MainClientFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="start"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_marginBottom="10dp"
            android:text="Контактные данные"
            android:textStyle="bold"
            android:textColor="@color/DarkGreenCyan"
            android:textAllCaps="false"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:orientation="vertical"
            android:background="@drawable/custom_block_fragment">

            <TextView
                android:id="@+id/address_main_center_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingLeft="18dp"
                android:paddingRight="18dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="2dp"
                android:text="Адрес гл. центра:"
                android:textColor="@color/DarkGreenCyan"
                android:textAllCaps="false"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/telephone_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingLeft="18dp"
                android:paddingRight="18dp"
                android:layout_marginBottom="2dp"
                android:text="Телефон тех. поддержки:"
                android:textColor="@color/DarkGreenCyan"
                android:textAllCaps="false"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/email_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingLeft="18dp"
                android:paddingRight="18dp"
                android:layout_marginBottom="2dp"
                android:text="Электронная почта:"
                android:textColor="@color/DarkGreenCyan"
                android:textAllCaps="false"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/url_vk_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingLeft="18dp"
                android:paddingRight="18dp"
                android:layout_marginBottom="2dp"
                android:text="VK:"
                android:textColor="@color/DarkGreenCyan"
                android:textAllCaps="false"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/url_instagram_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingLeft="18dp"
                android:paddingRight="18dp"
                android:layout_marginBottom="2dp"
                android:text="Instagram:"
                android:textColor="@color/DarkGreenCyan"
                android:textAllCaps="false"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/url_whats_app_company"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingLeft="18dp"
                android:paddingRight="18dp"
                android:text="WhatsApp:"
                android:textColor="@color/DarkGreenCyan"
                android:textAllCaps="false"
                android:textSize="14sp"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:text="Кратко об компании"
            android:textStyle="bold"
            android:textColor="@color/DarkGreenCyan"
            android:textAllCaps="false"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="360dp"
            android:orientation="vertical"
            android:background="@drawable/custom_block_fragment">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingLeft="18dp"
                android:paddingRight="18dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="2dp"
                android:text="@string/short_info_company_1"
                android:textColor="@color/DarkGreenCyan"
                android:textAllCaps="false"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingLeft="18dp"
                android:paddingRight="18dp"
                android:layout_marginBottom="2dp"
                android:text="@string/short_info_company_2"
                android:textColor="@color/DarkGreenCyan"
                android:textAllCaps="false"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingLeft="18dp"
                android:paddingRight="18dp"
                android:layout_marginBottom="2dp"
                android:text="@string/short_info_company_3"
                android:textColor="@color/DarkGreenCyan"
                android:textAllCaps="false"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingLeft="18dp"
                android:paddingRight="18dp"
                android:text="@string/short_info_company_3_1"
                android:textColor="@color/DarkGreenCyan"
                android:textAllCaps="false"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingLeft="18dp"
                android:paddingRight="18dp"
                android:text="@string/short_info_company_3_2"
                android:textColor="@color/DarkGreenCyan"
                android:textAllCaps="false"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingLeft="18dp"
                android:paddingRight="18dp"
                android:text="@string/short_info_company_3_3"
                android:textColor="@color/DarkGreenCyan"
                android:textAllCaps="false"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingLeft="18dp"
                android:paddingRight="18dp"
                android:text="@string/short_info_company_3_4"
                android:textColor="@color/DarkGreenCyan"
                android:textAllCaps="false"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:paddingLeft="18dp"
                android:paddingRight="18dp"
                android:layout_marginBottom="18dp"
                android:text="@string/short_info_company_3_5"
                android:textColor="@color/DarkGreenCyan"
                android:textAllCaps="false"
                android:textSize="14sp"/>

            <Button
                android:id="@+id/button_call_operator"
                android:onClick="callOperator"
                android:layout_width="170dp"
                android:layout_height="40dp"
                android:layout_marginRight="18dp"
                android:background="@drawable/signin_button"
                android:fontFamily="@font/aqum"
                android:text="Вызвать мастера"
                android:layout_gravity="right"
                android:textAllCaps="false"
                android:textColor="#174A42"
                android:textSize="12sp"/>

        </LinearLayout>

    </LinearLayout>

</FrameLayout>